# stats_logger

./: .gitignore  CMakeLists.txt  README.md  config.toml  specs.md
examples/input/: level.csv  trade.csv
include/: concurrent_log_parser.hpp  config_loader.hpp  logger.hpp  parser_csv.hpp  toml_config_parser.hpp
src/: config_loader.cpp  logger.cpp  main.cpp  parser_csv.cpp  toml_config_parser.cpp
